Credit TXN Latest changes by Manju